Bug 291122 - Mobile connection wizard offers non-internet gsm connection.
Summary: Mobile connection wizard offers non-internet gsm connection.
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Mobile Broadband (other bugs)
Version First Reported In: 0.9
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 06:33 UTC by Swami Dhyan Nataraj (Nikolay Shaplov)
Modified: 2012-01-10 14:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (1.20 KB, patch)
2012-01-10 06:42 UTC, Swami Dhyan Nataraj (Nikolay Shaplov)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Swami Dhyan Nataraj (Nikolay Shaplov) 2012-01-10 06:33:58 UTC
Version:           0.9 (using KDE 4.6.5) 
OS:                Linux

In India Vodafone mobile operator there are two possible connections with apns: "portalnmms" and "www". First one is chosen by nm wizard as a "default" connection. Through "portalmms" is not internet connection at all, it is for downloading provider's content only. So internet does not work.

Reproducible: Always

Steps to Reproduce:
New mobile connection/India/Vodafone. Default connection will be "portalmms" which is not internet connection



I also have a solution of this problem: modern mobile-broadband-provider-info now contains information about apn's purpose (internet|mms|wap), and I think that mn-connection wizard should offer only thous apns which is for internet usage.

Here goes an attached patch, that do this thing. (Be sure to check that your serviceproviders.xml has <usage type="internet"/> tags in it, before testing this patch ;-) )
Comment 1 Swami Dhyan Nataraj (Nikolay Shaplov) 2012-01-10 06:42:51 UTC
Created attachment 67638 [details]
patch
Comment 2 Lamarque V. Souza 2012-01-10 14:09:07 UTC
Git commit d395cfe7037ae7abd7d10c6b742657771d4c61a0 by Lamarque V. Souza.
Committed on 10/01/2012 at 15:06.
Pushed by lvsouza into branch 'master'.

Hide non-Internet APNs in Mobile Connection Wizard.
Thanks to Swami Dhyan Nataraj (Nikolay Shaplov ) for this patch.

I really love when someone opens a bug report with a fix and not only
a problem :-)

M  +1    -1    plasma_nm_version.h
M  +17   -1    settings/config/mobileproviders.cpp

http://commits.kde.org/networkmanagement/d395cfe7037ae7abd7d10c6b742657771d4c61a0
Comment 3 Lamarque V. Souza 2012-01-10 14:10:33 UTC
Git commit 149ccd2577999b4c5b134959d9a6b3039f265555 by Lamarque V. Souza.
Committed on 10/01/2012 at 15:06.
Pushed by lvsouza into branch 'nm09'.

Hide non-Internet APNs in Mobile Connection Wizard.
Thanks to Swami Dhyan Nataraj (Nikolay Shaplov ) for this patch.

I really love when someone opens a bug report with a fix and not only
a problem :-)

M  +1    -1    plasma_nm_version.h
M  +17   -1    settings/config/mobileproviders.cpp

http://commits.kde.org/networkmanagement/149ccd2577999b4c5b134959d9a6b3039f265555