Hide non-Internet APNs in Mobile Connection Wizard. Thanks to Swami Dhyan Nataraj (Nikolay Shaplov ) for this patch.

I really love when someone opens a bug report with a fix and not only
a problem :-)

BUG: 291122